<resources>
    <string name="app_name">RPG Inventory</string>

    <!-- TODO get actual IDs for this app -->
    <string name ="banner_ad_app_id">ca-app-pub-8764405956249464~9611241432</string>
    // TEST AD ID - swap over before release
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    // LIVE AD ID - do not enable for testing!
    <!-- <string name="banner_ad_unit_id">ca-app-pub-8764405956249464/2087974638</string> -->

    <string name="about_text">Feel free to make suggestions as comments on the Play Store! \n</string>
    <string name="about_rate">Rate this app</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="new_pc_instruction_text">Use this page to add or update a PC</string>
    <string name="new_pc_name_label_text">Name:</string>
    <string name="new_pc_campaign_label_text">Campaign:</string>
    <string name="new_pc_max_carry_label_text">Maximum Carry:</string>
    <string name="new_pc_confirm_btn_text">Confirm</string>

</resources>